src/test/deca/syntax/invalid/parenthese_manquante_readFloat.deca
// Description:
//    on omet une parenthèse au niveau de primary_exp pour readFloat()
//
// Resultats:
//    Erreur de syntaxe
//    ligne 10 : "missing ')' at ';'"


{ 
  readFloat(;
 }
